[package]
name = "SillyGame"
version = "0.1.0"
edition = "2024"

[dependencies]
winit = "0.30.0"
softbuffer = "0.4"
tiny-skia = "0.11.4"
#image = "0.25"
ab_glyph = "0.2.31"
curv-kzen = "0.10.0"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "2.0.1"  # Optional: for binary serialization
image = "0.25"
sha2 = "0.9"
hmac = "0.11"
class_group = "0.6.1"
